# spiral_CMC

./: meson.build
driver/: J2J3_sweep.txt  plan_anneal.sh
include/: MC.hpp  format_bits.hpp  pyrochlore_geometry.hpp  run_common.hpp  stats.hpp  timeit.hpp
scripts/: spinvis.py  ssf_plot.py  testrc
src/: anneal.cpp  anneal_and_quench.cpp  bzdump.cpp  meson.build  spiral_optimise.cpp
src/MC/: MC.cpp  meson.build  stats.cpp
test/: cubic_spiral_ssf.cpp  meson.build  spiral_ssf.cpp  symm_mul.cpp
