
test_symm_mul_bin = executable('symm_mul', 
  files('symm_mul.cpp'),
  dependencies: [
    latlib_dep,
    json_dep
    ],
  link_with: mc_lib,
  include_directories: inc
  )

test_spiral_ssf_bin = executable('spiral_ssf',
  files('spiral_ssf.cpp'),
  dependencies: g_deps,
  link_with: mc_lib,
  include_directories: inc
  )


test_cubic_spiral_ssf_bin = executable('cubic_spiral_ssf',
  files('cubic_spiral_ssf.cpp'),
  dependencies: g_deps,
  link_with: mc_lib,
  include_directories: inc
  )
